src/pages/common/components/Badge/Badge.less
@import '~css/typography';

:local {
    .badge {
        .caption-allcaps();
        align-items: center;
        border-radius: 100px;
        color: var(--neutral-grey-0);
        display: inline-flex;
        padding: 2px 8px;
        text-align: center;

        + .badge {
            margin-left: 8px;
        }

        --background-purple: var(--purple);
        --background-classic: var(--main-primary);
        --background-error: var(--feedback-error);
        --background-modern: var(--main-primary-4);
        --background-success: var(--feedback-success);
        --background-warning: var(--feedback-warning);
        --background-grey: var(--neutral-grey-4);
        --background-dark-grey: var(--neutral-grey-5);
        --background-indigo: var(--indigo);
        --background-dark: var(--neutral-grey-6);
        --background-light: var(--neutral-grey-1);
        --background-light-success: var(--accessory-green-bg);
        --background-light-warning: var(--accessory-orange-bg);
        --background-light-error: var(--accessory-red-bg);
        --background-blue: var(--accessory-blue-bg);
        --text-light: var(--neutral-grey-6);
        --text-blue: var(--main-primary-4);
        --text-light-success: var(--accessory-green-text);
        --text-light-warning: var(--accessory-brown-text);
        --text-light-error: var(--feedback-error-0);

        background-color: var(--background-grey);
    }
}

